--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -596,7 +596,7 @@ There are 6 things to count.
 \end{center}
 \begin{todolist}
 \item[\done]{Pull out 0.2 from bottom of $\boxed{1}$ (HNO\tsbs{3}),
-  dillute to 0.3 ml with $\boxed{4\ M\ HNO_3}$ $\boxed{\rightarrow 1W}$ (Part)}
+  dilute to 0.3 ml with $\boxed{4\ M\ HNO_3}$ $\boxed{\rightarrow 1W}$ (Part)}
   \begin{itemize}
   \item{Count on HPGe $\sim$ 1 hour}
   \end{itemize}
@@ -736,7 +736,7 @@ There are 6 things to count.
 \item[\done]{Counted Alpha Calibration (9 mm position)}
 \item[\done]{Prepare alpha sample of $\boxed{Stock}$}
   \begin{itemize}
-    \item{From Jarrod's stock 10$\mu$l was dilluted to 1ml
+    \item{From Jarrod's stock 10$\mu$l was diluted to 1ml
     and 10 $\mu$l was taken}
   \end{itemize}
 \end{todolist}
@@ -746,13 +746,13 @@ There are 6 things to count.
 \st{190 $\mu$l of DI water (leftover in glovebox)}\\
 990 $\mu$l of DI water (leftover in glovebox)\\
 =\\
-\st{0.2 ml of $\sim$ 0 M HNO}\tsbs{3}\st{ $\boxed{4\ Dillution}$}\\
-1 ml of $\sim$ 0 M HNO\tsbs{3} $\rightarrow\boxed{4\ Dillution}$
+\st{0.2 ml of $\sim$ 0 M HNO}\tsbs{3}\st{ $\boxed{4\ Dilution}$}\\
+1 ml of $\sim$ 0 M HNO\tsbs{3} $\rightarrow\boxed{4\ Dilution}$
 \end{center}
 \begin{todolist}
 \item[\done]{Prepare and count alpha sample of Stock}
   \begin{itemize}
-  \item{Take 20 $\mu$l of $\boxed{4\ Dillution}$, put onto
+  \item{Take 20 $\mu$l of $\boxed{4\ Dilution}$, put onto
   concentric circle disk plates (innermost circle) $\boxed{D1}$}
     \begin{itemize}
     \item{It should be noted that once an alpha source is
@@ -970,7 +970,7 @@ John also mentioned two good techniques, that should be noted:
 
 \begin{todolist}
 \item[\done]{Took 20 $\mu$l out of $\boxed{3}$ and put
-  onto planchet chip (no dillution)}
+  onto planchet chip (no dilution)}
   \begin{itemize}
   \item{Moved chip too early (before drying, ruined
     detector volume)}
@@ -2242,13 +2242,13 @@ uranium saturation to 45\% saturation (reference)
 
 \experiment{Cycle_X3_round_2_alpha}
 \begin{todolist}
-\item[\done]{Label vials: $\boxed{8,9,10\ Dillution}$,
-  $\boxed{8\ aq\ Dillution}$,
-  $\boxed{9\ aq\ Dillution}$,
-  $\boxed{10\ aq\ Dillution}$,
-  $\boxed{8\ or\ Dillution}$,
-  $\boxed{9\ or\ Dillution}$,
-  $\boxed{10\ or\ Dillution}$.
+\item[\done]{Label vials: $\boxed{8,9,10\ Dilution}$,
+  $\boxed{8\ aq\ Dilution}$,
+  $\boxed{9\ aq\ Dilution}$,
+  $\boxed{10\ aq\ Dilution}$,
+  $\boxed{8\ or\ Dilution}$,
+  $\boxed{9\ or\ Dilution}$,
+  $\boxed{10\ or\ Dilution}$.
   Label Chips: $\boxed{8\ Chip}$, $\boxed{9\ Chip}$,
   $\boxed{10\ Chip}$,
   $\boxed{8\ aq\ Chip}$, $\boxed{9\ aq\ Chip}$,
@@ -2323,19 +2323,19 @@ uranium saturation to 45\% saturation (reference)
 +\\
 990+/-9.9 $\mu$l of DI water (leftover in glovebox)\\
 =\\
-1+/-9.9 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{8,9,10\ Dillution}$
+1+/-9.9 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{8,9,10\ Dilution}$
 \end{center}
 \vspace{0.3cm}
 \begin{center}
-  20+/-0.2 $\mu$l of $\boxed{8,9,19\ aq\ Dillution}$ dropped onto
+  20+/-0.2 $\mu$l of $\boxed{8,9,19\ aq\ Dilution}$ dropped onto
   $\boxed{8\ Chip}$
 \end{center}
 \begin{center}
-  20+/-0.2 $\mu$l of $\boxed{8,9,19\ aq\ Dillution}$ dropped onto
+  20+/-0.2 $\mu$l of $\boxed{8,9,19\ aq\ Dilution}$ dropped onto
   $\boxed{9\ Chip}$
 \end{center}
 \begin{center}
-  20+/-0.2 $\mu$l of $\boxed{8,9,19\ aq\ Dillution}$ dropped onto
+  20+/-0.2 $\mu$l of $\boxed{8,9,19\ aq\ Dilution}$ dropped onto
   $\boxed{10\ Chip}$
 \end{center}
 \begin{todolist}
@@ -2350,7 +2350,7 @@ uranium saturation to 45\% saturation (reference)
 +\\
 390+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
 =\\
-0.4+/-0.0078 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{8\ aq\ Dillution}$
+0.4+/-0.0078 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{8\ aq\ Dilution}$
 \end{center}
 \begin{itemize}
 \item{$\boxed{8\ aq}$ transfer contaminated gloves (had the blue
@@ -2358,7 +2358,7 @@ uranium saturation to 45\% saturation (reference)
 \end{itemize}
 \vspace{0.3cm}
 \begin{center}
-  20+/-0.2 $\mu$l of $\boxed{8\ aq\ Dillution}$ dropped onto
+  20+/-0.2 $\mu$l of $\boxed{8\ aq\ Dilution}$ dropped onto
   $\boxed{8\ aq\ Chip}$
 \end{center}
 \begin{todolist}
@@ -2373,11 +2373,11 @@ uranium saturation to 45\% saturation (reference)
 +\\
 390+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
 =\\
-0.4+/-0.0078 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{9\ aq\ Dillution}$
+0.4+/-0.0078 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{9\ aq\ Dilution}$
 \end{center}
 \vspace{0.3cm}
 \begin{center}
-  20+/-0.2 $\mu$l of $\boxed{9\ aq\ Dillution}$ dropped onto
+  20+/-0.2 $\mu$l of $\boxed{9\ aq\ Dilution}$ dropped onto
   $\boxed{9\ aq\ Chip}$
 \end{center}
 \begin{todolist}
@@ -2388,11 +2388,11 @@ uranium saturation to 45\% saturation (reference)
 +\\
 390+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
 =\\
-0.4+/-0.0078 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{10\ aq\ Dillution}$
+0.4+/-0.0078 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{10\ aq\ Dilution}$
 \end{center}
 \vspace{0.3cm}
 \begin{center}
-  20+/-0.2 $\mu$l of $\boxed{10\ aq\ Dillution}$ dropped onto
+  20+/-0.2 $\mu$l of $\boxed{10\ aq\ Dilution}$ dropped onto
   $\boxed{10\ aq\ Chip}$
 \end{center}
 
@@ -2406,11 +2406,11 @@ uranium saturation to 45\% saturation (reference)
 +\\
 890+/-8.9 $\mu$l of 30\% TBP (leftover in glovebox)\\
 =\\
-0.9+/-0.0089 ml of 30\% TBP $\boxed{8\ or\ Dillution}$
+0.9+/-0.0089 ml of 30\% TBP $\boxed{8\ or\ Dilution}$
 \end{center}
 \vspace{0.3cm}
 \begin{center}
-  20+/-0.2 $\mu$l of $\boxed{8\ or\ Dillution}$ dropped onto
+  20+/-0.2 $\mu$l of $\boxed{8\ or\ Dilution}$ dropped onto
   $\boxed{8\ or\ Chip}$
 \end{center}
 \begin{itemize}
@@ -2426,11 +2426,11 @@ uranium saturation to 45\% saturation (reference)
 +\\
 890+/-8.9 $\mu$l of 30\% TBP (leftover in glovebox)\\
 =\\
-0.9+/-0.0089 ml of 30\% TBP $\boxed{9\ or\ Dillution}$
+0.9+/-0.0089 ml of 30\% TBP $\boxed{9\ or\ Dilution}$
 \end{center}
 \vspace{0.3cm}
 \begin{center}
-  \textbf{10}+/-0.12 $\mu$l of $\boxed{9\ or\ Dillution}$ dropped onto
+  \textbf{10}+/-0.12 $\mu$l of $\boxed{9\ or\ Dilution}$ dropped onto
   $\boxed{9\ or\ Chip}$
 \end{center}
 \begin{itemize}
@@ -2445,19 +2445,19 @@ uranium saturation to 45\% saturation (reference)
 +\\
 890+/-8.9 $\mu$l of 30\% TBP (leftover in glovebox)\\
 =\\
-0.9+/-0.0089 ml of 30\% TBP $\boxed{10\ or\ Dillution}$
+0.9+/-0.0089 ml of 30\% TBP $\boxed{10\ or\ Dilution}$
 \end{center}
 \vspace{0.3cm}
 \begin{center}
-  \textbf{10}+/-0.12 $\mu$l of $\boxed{10\ or\ Dillution}$ dropped onto
+  \textbf{10}+/-0.12 $\mu$l of $\boxed{10\ or\ Dilution}$ dropped onto
   $\boxed{10\ or\ Chip}$
 \end{center}
 \begin{itemize}
 \item{\textbf{Changed volume on chip because $\boxed{8\ or\ Chip}$
     potentially spilled over the inner ring}}
 \end{itemize}
-\item[\done]{\textbf{Note: Centrifuged all dillution vials before making
-    alpha samples, which means that first all dillutions were made,
+\item[\done]{\textbf{Note: Centrifuged all dilution vials before making
+    alpha samples, which means that first all dilutions were made,
     then all alpha samples were made}}
 \item[\done]{The above 7 alpha samples take up space in the
   glovebox, and I didn't want to disturb the samples (moving them
@@ -3325,18 +3325,18 @@ always a problem.
 
 \begin{todolist}
 \item[\done]{Label vials:
-  $\boxed{8\ aqII\ Dillution}$,
-  $\boxed{9\ aqII\ Dillution}$,
-  $\boxed{10\ aqII\ Dillution}$,
-  $\boxed{8\ orII\ Dillution}$,
-  $\boxed{9\ orII\ Dillution}$,
-  $\boxed{10\ orII\ Dillution}$.
-  Do not label chips at this time, just dillute samples
+  $\boxed{8\ aqII\ Dilution}$,
+  $\boxed{9\ aqII\ Dilution}$,
+  $\boxed{10\ aqII\ Dilution}$,
+  $\boxed{8\ orII\ Dilution}$,
+  $\boxed{9\ orII\ Dilution}$,
+  $\boxed{10\ orII\ Dilution}$.
+  Do not label chips at this time, just dilute samples
   for mass spec}
 \item[\done]{Also transfer 3 red and 4 blue push caps for smaller vials}
 \item[\done]{Transfer all above vials and chips into glovebox}
 \item[\done]{Discovered (via Kevin) that each alpha sample
-  needs to be dilluted by a factor of 10,000 from the
+  needs to be diluted by a factor of 10,000 from the
   original glovebox solution (not my initial)}
 \end{todolist}  
 
@@ -3379,7 +3379,7 @@ always a problem.
 +\\
 990+/-5.94 $\mu$l of DI water (leftover in glovebox)\\
 =\\
-1.0+/-0.006 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{8\ aqII\ Dillution}$
+1.0+/-0.006 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{8\ aqII\ Dilution}$
 \end{center}
 
 \begin{todolist}
@@ -3390,7 +3390,7 @@ always a problem.
 +\\
 990+/-5.9 $\mu$l of DI water (leftover in glovebox)\\
 =\\
-1.0+/-0.006 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{9\ aqII\ Dillution}$
+1.0+/-0.006 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{9\ aqII\ Dilution}$
 \end{center}
 
 \begin{todolist}
@@ -3401,7 +3401,7 @@ always a problem.
 +\\
 990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
 =\\
-1.0+/-0.006 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{10\ aqII\ Dillution}$
+1.0+/-0.006 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{10\ aqII\ Dilution}$
 \end{center}
 
 
@@ -3414,7 +3414,7 @@ always a problem.
 +\\
 990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
 =\\
-1.0+/-0.006 ml of 30\% TBP $\boxed{8\ orII\ Dillution}$
+1.0+/-0.006 ml of 30\% TBP $\boxed{8\ orII\ Dilution}$
 \end{center}
 
 \begin{todolist}
@@ -3425,7 +3425,7 @@ always a problem.
 +\\
 990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
 =\\
-1.0+/-0.006 ml of 30\% TBP $\boxed{9\ orII\ Dillution}$
+1.0+/-0.006 ml of 30\% TBP $\boxed{9\ orII\ Dilution}$
 \end{center}
 
 \begin{todolist}
@@ -3436,7 +3436,7 @@ always a problem.
 +\\
 990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
 =\\
-1.0+/-0.006 ml of 30\% TBP $\boxed{10\ orII\ Dillution}$
+1.0+/-0.006 ml of 30\% TBP $\boxed{10\ orII\ Dilution}$
 \end{center}
 
 \end{todolist}
@@ -3624,9 +3624,9 @@ very hard to not cross contaminate anything}
 \item{Check if using interface for second extraction
   interfered with results for 8,9, 10 experiment}
 \item[\done]{Wrote the procedure for tomorrow}
-\item{Modified second extraction,
+\item[\done]{Modified second extraction,
   which had 248 ml for $\boxed{8\ aqII\ C}$}
-\item{Make new picture to include making diluted samples}
+\item[\done]{Make new picture to include making diluted samples}
 \end{todolist}
 
 
@@ -3652,12 +3652,12 @@ Third contact
   $\boxed{9\ orIII\ C}$
   $\boxed{10\ aqIII}$, $\boxed{10\ aqIII\ C}$, $\boxed{10\ orIII}$,
   $\boxed{10\ orIII\ C}$,
-  $\boxed{8\ aqIII\ Dillution}$,
-  $\boxed{9\ aqIII\ Dillution}$,
-  $\boxed{10\ aqIII\ Dillution}$,
-  $\boxed{8\ orIII\ Dillution}$,
-  $\boxed{9\ orIII\ Dillution}$,
-  $\boxed{10\ orIII\ Dillution}$ (smaller 2.5 ml tubes)
+  $\boxed{8\ aqIII\ Dilution}$,
+  $\boxed{9\ aqIII\ Dilution}$,
+  $\boxed{10\ aqIII\ Dilution}$,
+  $\boxed{8\ orIII\ Dilution}$,
+  $\boxed{9\ orIII\ Dilution}$,
+  $\boxed{10\ orIII\ Dilution}$ (smaller 2.5 ml tubes)
   $\boxed{8\ mixIII}$, $\boxed{9\ mixIII}$,
     $\boxed{10\ miIIIx}$ (smaller 1 ml tubes from John Burns,
     have conical bottoms, makes more minute separations easier)}
@@ -3669,12 +3669,12 @@ Third contact
   $\boxed{9\ orIII\ C}$
   $\boxed{10\ aqIII}$, $\boxed{10\ aqIII\ C}$, $\boxed{10\ orIII}$,
   $\boxed{10\ orIII\ C}$,
-    $\boxed{8\ aqIII\ Dillution}$,
-  $\boxed{9\ aqIII\ Dillution}$,
-  $\boxed{10\ aqIII\ Dillution}$,
-  $\boxed{8\ orIII\ Dillution}$,
-  $\boxed{9\ orIII\ Dillution}$,
-  $\boxed{10\ orIII\ Dillution}$,
+    $\boxed{8\ aqIII\ Dilution}$,
+  $\boxed{9\ aqIII\ Dilution}$,
+  $\boxed{10\ aqIII\ Dilution}$,
+  $\boxed{8\ orIII\ Dilution}$,
+  $\boxed{9\ orIII\ Dilution}$,
+  $\boxed{10\ orIII\ Dilution}$,
   $\boxed{8\ mixIII}$, $\boxed{9\ mixIII}$,
   $\boxed{10\ miIIIx}$.
   (3 clear push caps, and 6 blue push caps
@@ -3736,7 +3736,7 @@ Third contact
     990+/-5.94 $\mu$l of DI water (leftover in glovebox)\\
     =\\
     1.0+/-0.006 ml of $\sim$
-    0 M HNO\tsbs{3} $\boxed{8\ aqIII\ Dillution}$
+    0 M HNO\tsbs{3} $\boxed{8\ aqIII\ Dilution}$
   \end{center}
   \begin{todolist}
   \item{- $\boxed{9\ aqIII}$}
@@ -3748,7 +3748,7 @@ Third contact
     990+/-5.9 $\mu$l of DI water (leftover in glovebox)\\
     =\\
     1.0+/-0.006 ml of $\sim$
-    0 M HNO\tsbs{3} $\boxed{9\ aqIII\ Dillution}$
+    0 M HNO\tsbs{3} $\boxed{9\ aqIII\ Dilution}$
   \end{center}
   \begin{todolist}
   \item{- $\boxed{10\ aqIII}$}
@@ -3760,7 +3760,7 @@ Third contact
     990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
     =\\
     1.0+/-0.006 ml of $\sim$
-    0 M HNO\tsbs{3} $\boxed{10\ aqIII\ Dillution}$
+    0 M HNO\tsbs{3} $\boxed{10\ aqIII\ Dilution}$
   \end{center}
 
 \item{Make dilution of each organic phase}
@@ -3773,7 +3773,7 @@ Third contact
     +\\
     990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
     =\\
-    1.0+/-0.006 ml of 30\% TBP $\boxed{8\ oriII\ Dillution}$
+    1.0+/-0.006 ml of 30\% TBP $\boxed{8\ oriII\ Dilution}$
   \end{center}
   \begin{todolist}
   \item{- $\boxed{9\ orIII}$}
@@ -3784,7 +3784,7 @@ Third contact
     +\\
     990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
     =\\
-    1.0+/-0.006 ml of 30\% TBP $\boxed{9\ orIII\ Dillution}$
+    1.0+/-0.006 ml of 30\% TBP $\boxed{9\ orIII\ Dilution}$
   \end{center}
 
   \begin{todolist}
@@ -3796,7 +3796,7 @@ Third contact
     +\\
     990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
     =\\
-    1.0+/-0.006 ml of 30\% TBP $\boxed{10\ orIII\ Dillution}$
+    1.0+/-0.006 ml of 30\% TBP $\boxed{10\ orIII\ Dilution}$
   \end{center}
  
 \item{Transfer out $\boxed{8\ orIII\ C}$, $\boxed{8\ aqIII\ C}$,
@@ -3812,10 +3812,10 @@ Third contact
 \begin{figure}[H] % Example of including images
 \begin{center}
   \includegraphics[width=0.8\linewidth]
-                  {Figures/Cycle_x3_round_2_extraction_2}
+                  {Figures/Cycle_x3_round_2_extraction_3}
 \end{center}
 \caption{Extraction three times round 2 extraction 3}
-\label{fig:round2_extraction2}
+\label{fig:round2_extraction3}
 \end{figure}
 
 %----------------------------------------------------------------------
