--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -3633,11 +3633,11 @@ very hard to not cross contaminate anything}
 %------------------------------------------------------------------------
 %	LAB BOOK day
 %-----------------------------------------------------------------------
+
 \labday{Wednesday 7, December 2016}
 
 Note...second extraction had 248 ml for $\boxed{8\ aqII\ C}$
-change in notebook!
-Make new picture to include making diluted samples.
+change in calculations. Didn't change results much.
 
 \experiment{Process_X3}
 
@@ -3645,7 +3645,7 @@ Third contact
 
 \begin{todolist}
 
-\item{Label vials,
+\item[\done]{Label vials,
   $\boxed{8\ aqIII}$,  $\boxed{8\ aqIII\ C}$,  $\boxed{8\ orIII}$,
   $\boxed{8\ orIII\ C}$
   $\boxed{9\ aqIII}$,  $\boxed{9\ aqIII\ C}$,  $\boxed{9\ orIII}$,
@@ -3677,11 +3677,14 @@ Third contact
   $\boxed{10\ orIII\ Dilution}$,
   $\boxed{8\ mixIII}$, $\boxed{9\ mixIII}$,
   $\boxed{10\ miIIIx}$.
-  (3 clear push caps, and 6 blue push caps
-  6 red push caps). Also with 3 15 ml centrifuge tubes (already
+  (3 clear push caps, and 9 blue push caps
+  9 red push caps). Also with 3 15 ml centrifuge tubes (already
   have three in the glovebox)}
 
-\item{Measure volumes of all aqueous phases, $\boxed{8\ aqII}$
+\item[\done]{Centrifuge $\boxed{8\ aqII}$, $\boxed{9\ aqII}$,
+  $\boxed{10\ aqII}$ for 3,300 rpm. 4 minutes to get liquid to
+  bottom}
+\item[\done]{Measure volumes of all aqueous phases, $\boxed{8\ aqII}$
      $\boxed{9\ aqII}$, $\boxed{10\ aqII}$}
 \begin{table}[H]
   \begin{center}
@@ -3689,26 +3692,29 @@ Third contact
     \begin{tabular}{l l l}
       \toprule
       Series & Aqueous (8,9, or 10)\\ 
-      8 &  +/- \\
-      9 &  +/- \\
-      10 & +/- \\
+      8 &  353+/-3\% \\
+      9 &  353+/-3\% \\
+      10 & 362+/-3\% \\
       \bottomrule
     \end{tabular}
   \end{center}
 \end{table}  
 \
-\item{Add XX $\mu$l of $\boxed{TBP}$ to $\boxed{8\ aqII}$}
-\item{Add XX $\mu$l of $\boxed{TBP}$ to $\boxed{9\ aqII}$}
-\item{Add XX $\mu$l of $\boxed{TBP}$ to $\boxed{10\ aqII}$}
-\item{Vortex mix $\boxed{8\ aqII}$ for 15 minutes on pulse mode}
-\item{Vortex mix $\boxed{9\ aqII}$ for 15 minutes on pulse mode}
-\item{Vortex mix $\boxed{10\ aqII}$ for 15 minutes on pulse mode}
+\item[\done]{Add 353 $\mu$l of $\boxed{TBP}$ to $\boxed{8\ aqII}$}
+\item[\done]{\textbf{Add 362 }$\mu$l of $\boxed{TBP}$ to $\boxed{9\ aqII}$}
+  \begin{itemize}
+  \item{\textbf{Accident!!! need to correct in calculations}}
+  \end{itemize}
+\item[\done]{Add 362 $\mu$l of $\boxed{TBP}$ to $\boxed{10\ aqII}$}
+\item[\done]{Vortex mix $\boxed{8\ aqII}$ for 15 minutes on pulse mode}
+\item[\done]{Vortex mix $\boxed{9\ aqII}$ for 15 minutes on pulse mode}
+\item[\done]{Vortex mix $\boxed{10\ aqII}$ for 15 minutes on pulse mode}
 
-\item{Centrifuge $\boxed{8\ aqII}$, $\boxed{9\ aqII}$,
+\item[\done]{Centrifuge $\boxed{8\ aqII}$, $\boxed{9\ aqII}$,
   and $\boxed{10\ aqII}$
-  with $\boxed{Buddy}$ on 3300 rpm, for 5 minutes}
+  with $\boxed{Buddy}$ on 3300 rpm, for 10 minutes}
 
-\item{Pipette with disposable pipette the organic phase
+\item[\done]{Pipette with disposable pipette the organic phase
   first, then the aqueous (for all three vials),
   (also used different disposable pipettes for the
   different phases - no contamination)
@@ -3722,12 +3728,17 @@ Third contact
   are notes for what happened in the initial transfer,
   and below that are notes for the dilution.}
   \begin{itemize}
-    \item{notes}\vspace{3cm}
+  \item{$\boxed{10\ OrIII\ C}$ and $\boxed{10\ AqIII\ C}$
+    both have 200 $\mu$l instead of 250 $\mu$l. Potentially
+    because I lost a drop of the organic phase}
+  \item{Combined all organic after making count and dilution
+    solutions}
+  \item{Also had to recentrifuge the 10 series twice}
   \end{itemize}
   
-\item{Make dilution of each aqueous}
+\item[\done]{Make dilution of each aqueous}
   \begin{todolist}
-  \item{- $\boxed{8\ aqIII}$}
+  \item[\done]{- $\boxed{8\ aqIII}$}
   \end{todolist}
   \begin{center}
     10+/-0.3 $\mu$l of $\boxed{8\ aqIII}$
@@ -3739,7 +3750,7 @@ Third contact
     0 M HNO\tsbs{3} $\boxed{8\ aqIII\ Dilution}$
   \end{center}
   \begin{todolist}
-  \item{- $\boxed{9\ aqIII}$}
+  \item[\done]{- $\boxed{9\ aqIII}$}
   \end{todolist}
   \begin{center}
     10+/-0.3 $\mu$l of $\boxed{9\ aqIII}$
@@ -3751,7 +3762,7 @@ Third contact
     0 M HNO\tsbs{3} $\boxed{9\ aqIII\ Dilution}$
   \end{center}
   \begin{todolist}
-  \item{- $\boxed{10\ aqIII}$}
+  \item[\done]{- $\boxed{10\ aqIII}$}
   \end{todolist}
   \begin{center}
     10+/-0.3 $\mu$l of $\boxed{10\ aqIII}$
@@ -3763,9 +3774,9 @@ Third contact
     0 M HNO\tsbs{3} $\boxed{10\ aqIII\ Dilution}$
   \end{center}
 
-\item{Make dilution of each organic phase}
+\item[\done]{Make dilution of each organic phase}
   \begin{todolist}
-  \item{- $\boxed{8\ orIII}$}
+  \item[\done]{- $\boxed{8\ orIII}$}
   \end{todolist}
   \begin{center}
     10+/-0.3 $\mu$l of $\boxed{8\ orIII}$
@@ -3776,7 +3787,7 @@ Third contact
     1.0+/-0.006 ml of 30\% TBP $\boxed{8\ oriII\ Dilution}$
   \end{center}
   \begin{todolist}
-  \item{- $\boxed{9\ orIII}$}
+  \item[\done]{- $\boxed{9\ orIII}$}
   \end{todolist}
   \begin{center}
     10+/-0.3 $\mu$l of $\boxed{9\ orIII}$
@@ -3786,9 +3797,8 @@ Third contact
     =\\
     1.0+/-0.006 ml of 30\% TBP $\boxed{9\ orIII\ Dilution}$
   \end{center}
-
   \begin{todolist}
-  \item{- $\boxed{10\ orIII}$}
+  \item[\done]{- $\boxed{10\ orIII}$}
   \end{todolist}
   \begin{center}
     10+/-0.3 $\mu$l of $\boxed{10\ orIII}$
@@ -3799,13 +3809,301 @@ Third contact
     1.0+/-0.006 ml of 30\% TBP $\boxed{10\ orIII\ Dilution}$
   \end{center}
  
-\item{Transfer out $\boxed{8\ orIII\ C}$, $\boxed{8\ aqIII\ C}$,
+\item[\done]{Transfer out $\boxed{8\ orIII\ C}$, $\boxed{8\ aqIII\ C}$,
   $\boxed{9\ orIII\ C}$, $\boxed{9\ aqIII\ C}$, $\boxed{10\ orIII\ C}$,
   $\boxed{10\ aqIII\ C}$, in 15 ml centrifuge tubes}
-\item{Radiac wash the above tubes, and store in fumehood behind
+\item[\done]{Clean stuff in glovebox}
+\item[\done]{Radiac wash the above tubes, and store in fumehood behind
   lead - wait to count}
-\item{Clean stuff in glovebox}
-\item{Start count $\boxed{8\ aqIII\ C}$ at 26 cm TIME}
+\item[\done]{Centrifuge $\boxed{8\ orIII\ C}$, $\boxed{8\ aqIII\ C}$,
+  $\boxed{9\ orIII\ C}$, $\boxed{9\ aqIII\ C}$, $\boxed{10\ orIII\ C}$,
+  $\boxed{10\ aqIII\ C}$, for 2 minutes 4,400 rpm to put all liquid at
+  bottom, then parafilm wrap all the vials and store in fumehood.}
+\item[\done]{Start count $\boxed{8\ aqIII\ C}$ at 26 cm 2:15pm}
+\item{Stop count $\boxed{8\ AqIII\ C}$ at 5:30 pm}
+\item{Start count $\boxed{9\ AqIII\ C}$ at 5:30 pm}
+\item{Stop count $\boxed{9\ AqIII\ C}$ at 9:30 pm}
+\item{Start count $\boxed{10\ AqIII\ C}$ at 9:30 pm (count over night)}
+\item{Write up procedure for tomorrow}
+
+  
+\end{todolist}
+
+\begin{figure}[H] % Example of including images
+\begin{center}
+  \includegraphics[width=0.8\linewidth]
+                  {Figures/Cycle_x3_round_2_extraction_3}
+\end{center}
+\caption{Extraction three times round 2 extraction 3}
+\label{fig:round2_extraction3}
+\end{figure}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+%------------------------------------------------------------------------
+%	LAB BOOK day
+%-----------------------------------------------------------------------
+
+\labday{Thursday 8, December 2016}
+
+\experiment{Process_X3}
+
+\begin{todolist}
+\item{Stop count $\boxed{10\ AqIII\ C}$ early morning}
+\item{Start count $\boxed{8\ OrIII\ C}$ early morning}
+\item{Transfer $\boxed{8\ AqIII\ C}$, $\boxed{9\ AqIII\ C}$,
+  $\boxed{10\ AqIII\ C}$ into glove box}
+\item{Transfer $\boxed{8\ AqIII\ C}$ into $\boxed{8\ AqIII}$}
+\item{Transfer $\boxed{9\ AqIII\ C}$ into $\boxed{9\ AqIII}$}
+\item{Transfer $\boxed{10\ AqIII\ C}$ into $\boxed{10\ AqIII}$}
+\end{todolist}
+
+Fourth contact
+
+\begin{todolist}
+
+\item{Label vials,
+  $\boxed{8\ aqIV}$,
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  $\boxed{8\ aqIII\ C}$,  $\boxed{8\ orIII}$,
+  $\boxed{8\ orIII\ C}$
+  $\boxed{9\ aqIII}$,  $\boxed{9\ aqIII\ C}$,  $\boxed{9\ orIII}$,
+  $\boxed{9\ orIII\ C}$
+  $\boxed{10\ aqIII}$, $\boxed{10\ aqIII\ C}$, $\boxed{10\ orIII}$,
+  $\boxed{10\ orIII\ C}$,
+  $\boxed{8\ aqIII\ Dilution}$,
+  $\boxed{9\ aqIII\ Dilution}$,
+  $\boxed{10\ aqIII\ Dilution}$,
+  $\boxed{8\ orIII\ Dilution}$,
+  $\boxed{9\ orIII\ Dilution}$,
+  $\boxed{10\ orIII\ Dilution}$ (smaller 2.5 ml tubes)
+  $\boxed{8\ mixIII}$, $\boxed{9\ mixIII}$,
+    $\boxed{10\ miIIIx}$ (smaller 1 ml tubes from John Burns,
+    have conical bottoms, makes more minute separations easier)}
+
+\item{Transfer:
+  $\boxed{8\ aqIII}$,  $\boxed{8\ aqIII\ C}$,  $\boxed{8\ orIII}$,
+  $\boxed{8\ orIII\ C}$
+  $\boxed{9\ aqIII}$,  $\boxed{9\ aqIII\ C}$,  $\boxed{9\ orIII}$,
+  $\boxed{9\ orIII\ C}$
+  $\boxed{10\ aqIII}$, $\boxed{10\ aqIII\ C}$, $\boxed{10\ orIII}$,
+  $\boxed{10\ orIII\ C}$,
+    $\boxed{8\ aqIII\ Dilution}$,
+  $\boxed{9\ aqIII\ Dilution}$,
+  $\boxed{10\ aqIII\ Dilution}$,
+  $\boxed{8\ orIII\ Dilution}$,
+  $\boxed{9\ orIII\ Dilution}$,
+  $\boxed{10\ orIII\ Dilution}$,
+  $\boxed{8\ mixIII}$, $\boxed{9\ mixIII}$,
+  $\boxed{10\ miIIIx}$.
+  (3 clear push caps, and 9 blue push caps
+  9 red push caps). Also with 3 15 ml centrifuge tubes (already
+  have three in the glovebox)}
+
+\item[\done]{Centrifuge $\boxed{8\ aqII}$, $\boxed{9\ aqII}$,
+  $\boxed{10\ aqII}$ for 3,300 rpm. 4 minutes to get liquid to
+  bottom}
+\item[\done]{Measure volumes of all aqueous phases, $\boxed{8\ aqII}$
+     $\boxed{9\ aqII}$, $\boxed{10\ aqII}$}
+\begin{table}[H]
+  \begin{center}
+    \caption{Volumes for combined aqueous phases}
+    \begin{tabular}{l l l}
+      \toprule
+      Series & Aqueous (8,9, or 10)\\ 
+      8 &  353+/-3\% \\
+      9 &  353+/-3\% \\
+      10 & 362+/-3\% \\
+      \bottomrule
+    \end{tabular}
+  \end{center}
+\end{table}  
+\
+\item[\done]{Add 353 $\mu$l of $\boxed{TBP}$ to $\boxed{8\ aqII}$}
+\item[\done]{\textbf{Add 362 }$\mu$l of $\boxed{TBP}$ to $\boxed{9\ aqII}$}
+  \begin{itemize}
+  \item{\textbf{Accident!!! need to correct in calculations}}
+  \end{itemize}
+\item[\done]{Add 362 $\mu$l of $\boxed{TBP}$ to $\boxed{10\ aqII}$}
+\item[\done]{Vortex mix $\boxed{8\ aqII}$ for 15 minutes on pulse mode}
+\item[\done]{Vortex mix $\boxed{9\ aqII}$ for 15 minutes on pulse mode}
+\item[\done]{Vortex mix $\boxed{10\ aqII}$ for 15 minutes on pulse mode}
+
+\item[\done]{Centrifuge $\boxed{8\ aqII}$, $\boxed{9\ aqII}$,
+  and $\boxed{10\ aqII}$
+  with $\boxed{Buddy}$ on 3300 rpm, for 10 minutes}
+
+\item[\done]{Pipette with disposable pipette the organic phase
+  first, then the aqueous (for all three vials),
+  (also used different disposable pipettes for the
+  different phases - no contamination)
+  as much as so that there is no mixing.
+  Then transferred the boundary to a smaller vial, let sit.
+  Prepare counting solutions of 250 $\mu$l of each of the solutions
+  A picture will be provided for the whole process for
+  $\boxed{8\ aqII}$
+  on the following page
+  , also make dilution of each of the phases. Directly below
+  are notes for what happened in the initial transfer,
+  and below that are notes for the dilution.}
+  \begin{itemize}
+  \item{$\boxed{10\ OrIII\ C}$ and $\boxed{10\ AqIII\ C}$
+    both have 200 $\mu$l instead of 250 $\mu$l. Potentially
+    because I lost a drop of the organic phase}
+  \item{Combined all organic after making count and dilution
+    solutions}
+  \item{Also had to recentrifuge the 10 series twice}
+  \end{itemize}
+  
+\item[\done]{Make dilution of each aqueous}
+  \begin{todolist}
+  \item[\done]{- $\boxed{8\ aqIII}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{8\ aqIII}$
+    (4 M HNO\tsbs{3}) [smaller pipette]\\
+    +\\
+    990+/-5.94 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of $\sim$
+    0 M HNO\tsbs{3} $\boxed{8\ aqIII\ Dilution}$
+  \end{center}
+  \begin{todolist}
+  \item[\done]{- $\boxed{9\ aqIII}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{9\ aqIII}$
+    (4 M HNO\tsbs{3}) [smaller pipette]\\
+    +\\
+    990+/-5.9 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of $\sim$
+    0 M HNO\tsbs{3} $\boxed{9\ aqIII\ Dilution}$
+  \end{center}
+  \begin{todolist}
+  \item[\done]{- $\boxed{10\ aqIII}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{10\ aqIII}$
+    (4 M HNO\tsbs{3}) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of $\sim$
+    0 M HNO\tsbs{3} $\boxed{10\ aqIII\ Dilution}$
+  \end{center}
+
+\item[\done]{Make dilution of each organic phase}
+  \begin{todolist}
+  \item[\done]{- $\boxed{8\ orIII}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{8\ orIII}$
+    (30\% TBP) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of 30\% TBP $\boxed{8\ oriII\ Dilution}$
+  \end{center}
+  \begin{todolist}
+  \item[\done]{- $\boxed{9\ orIII}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{9\ orIII}$
+    (30\% TBP) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of 30\% TBP $\boxed{9\ orIII\ Dilution}$
+  \end{center}
+  \begin{todolist}
+  \item[\done]{- $\boxed{10\ orIII}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{10\ orIII}$
+    (30\% TBP) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of 30\% TBP $\boxed{10\ orIII\ Dilution}$
+  \end{center}
+ 
+\item[\done]{Transfer out $\boxed{8\ orIII\ C}$, $\boxed{8\ aqIII\ C}$,
+  $\boxed{9\ orIII\ C}$, $\boxed{9\ aqIII\ C}$, $\boxed{10\ orIII\ C}$,
+  $\boxed{10\ aqIII\ C}$, in 15 ml centrifuge tubes}
+\item[\done]{Clean stuff in glovebox}
+\item[\done]{Radiac wash the above tubes, and store in fumehood behind
+  lead - wait to count}
+\item[\done]{Centrifuge $\boxed{8\ orIII\ C}$, $\boxed{8\ aqIII\ C}$,
+  $\boxed{9\ orIII\ C}$, $\boxed{9\ aqIII\ C}$, $\boxed{10\ orIII\ C}$,
+  $\boxed{10\ aqIII\ C}$, for 2 minutes 4,400 rpm to put all liquid at
+  bottom, then parafilm wrap all the vials and store in fumehood.}
+\item[\done]{Start count $\boxed{8\ aqIII\ C}$ at 26 cm 2:15pm}
+\item{Stop count $\boxed{8\ AqIII\ C}$ at 5:30 pm}
+\item{Start count $\boxed{9\ AqIII\ C}$ at 5:30 pm}
+\item{Stop count $\boxed{9\ AqIII\ C}$ at 9:30 pm}
+\item{Start count $\boxed{10\ AqIII\ C}$ at 9:30 pm (count over night)}
  
 \end{todolist}
 
@@ -3817,6 +4115,15 @@ Third contact
 \caption{Extraction three times round 2 extraction 3}
 \label{fig:round2_extraction3}
 \end{figure}
+
+
+
+
+
+
+
+
+
 
 %----------------------------------------------------------------------
 %	Examples
