--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -3676,7 +3676,7 @@ Third contact
   $\boxed{9\ orIII\ Dilution}$,
   $\boxed{10\ orIII\ Dilution}$,
   $\boxed{8\ mixIII}$, $\boxed{9\ mixIII}$,
-  $\boxed{10\ miIIIx}$.
+  $\boxed{10\ mixIII}$.
   (3 clear push caps, and 9 blue push caps
   9 red push caps). Also with 3 15 ml centrifuge tubes (already
   have three in the glovebox)}
@@ -3719,7 +3719,8 @@ Third contact
   (also used different disposable pipettes for the
   different phases - no contamination)
   as much as so that there is no mixing.
-  Then transferred the boundary to a smaller vial, let sit.
+  Then transferred the boundary to a smaller vial, centrifuge.
+  Transfer rest of phases.
   Prepare counting solutions of 250 $\mu$l of each of the solutions
   A picture will be provided for the whole process for
   $\boxed{8\ aqII}$
@@ -3784,7 +3785,7 @@ Third contact
     +\\
     990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
     =\\
-    1.0+/-0.006 ml of 30\% TBP $\boxed{8\ oriII\ Dilution}$
+    1.0+/-0.006 ml of 30\% TBP $\boxed{8\ orIII\ Dilution}$
   \end{center}
   \begin{todolist}
   \item[\done]{- $\boxed{9\ orIII}$}
@@ -3820,13 +3821,13 @@ Third contact
   $\boxed{10\ aqIII\ C}$, for 2 minutes 4,400 rpm to put all liquid at
   bottom, then parafilm wrap all the vials and store in fumehood.}
 \item[\done]{Start count $\boxed{8\ aqIII\ C}$ at 26 cm 2:15pm}
-\item{Stop count $\boxed{8\ AqIII\ C}$ at 5:30 pm}
-\item{Start count $\boxed{9\ AqIII\ C}$ at 5:30 pm}
-\item{Stop count $\boxed{9\ AqIII\ C}$ at 9:30 pm}
-\item{Start count $\boxed{10\ AqIII\ C}$ at 9:30 pm (count over night)}
-\item{Write up procedure for tomorrow}
+\item[\done]{Stop count $\boxed{8\ AqIII\ C}$ at 5:30 pm}
+\item[\done]{Start count $\boxed{9\ AqIII\ C}$ at 5:30 pm}
+\item[\done]{Stop count $\boxed{9\ AqIII\ C}$ at 9:30 pm}
+\item[\done]{Start count $\boxed{10\ AqIII\ C}$
+  at 9:30 pm (count over night)}
+\item[\done]{Write up procedure for tomorrow}
 
-  
 \end{todolist}
 
 \begin{figure}[H] % Example of including images
@@ -3839,42 +3840,19 @@ Third contact
 \end{figure}
 
 
+\experiment{ResearchMeeting}
+
+\begin{itemize}
+\item{Email Dr. Burns about the cheat sheet}
+\item{Use percentage that Matt used for his paper}
+\item{Bug Dr. Folden Friday evening, maybe 1 hour of
+enrollment, talk to Julie Zercher look up at CHEM tamu.edu}
+\end{itemize}
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-%------------------------------------------------------------------------
+%-----------------------------------------------------------------
 %	LAB BOOK day
-%-----------------------------------------------------------------------
+%---------------------------------------------------------------
 
 \labday{Thursday 8, December 2016}
 
@@ -3896,50 +3874,20 @@ Fourth contact
 
 \item{Label vials,
   $\boxed{8\ aqIV}$,
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  $\boxed{8\ aqIII\ C}$,  $\boxed{8\ orIII}$,
-  $\boxed{8\ orIII\ C}$
-  $\boxed{9\ aqIII}$,  $\boxed{9\ aqIII\ C}$,  $\boxed{9\ orIII}$,
-  $\boxed{9\ orIII\ C}$
-  $\boxed{10\ aqIII}$, $\boxed{10\ aqIII\ C}$, $\boxed{10\ orIII}$,
-  $\boxed{10\ orIII\ C}$,
-  $\boxed{8\ aqIII\ Dilution}$,
-  $\boxed{9\ aqIII\ Dilution}$,
-  $\boxed{10\ aqIII\ Dilution}$,
-  $\boxed{8\ orIII\ Dilution}$,
-  $\boxed{9\ orIII\ Dilution}$,
-  $\boxed{10\ orIII\ Dilution}$ (smaller 2.5 ml tubes)
-  $\boxed{8\ mixIII}$, $\boxed{9\ mixIII}$,
-    $\boxed{10\ miIIIx}$ (smaller 1 ml tubes from John Burns,
+  $\boxed{8\ aqIV\ C}$,  $\boxed{8\ orVI}$,
+  $\boxed{8\ orIV\ C}$
+  $\boxed{9\ aqIV}$,  $\boxed{9\ aqIV\ C}$,  $\boxed{9\ orIV}$,
+  $\boxed{9\ orIV\ C}$
+  $\boxed{10\ aqIV}$, $\boxed{10\ aqIV\ C}$, $\boxed{10\ orIV}$,
+  $\boxed{10\ orIV\ C}$,
+  $\boxed{8\ aqIV\ Dilution}$,
+  $\boxed{9\ aqIV\ Dilution}$,
+  $\boxed{10\ aqIV\ Dilution}$,
+  $\boxed{8\ orIV\ Dilution}$,
+  $\boxed{9\ orIV\ Dilution}$,
+  $\boxed{10\ orIV\ Dilution}$ (smaller 2.5 ml tubes)
+  $\boxed{8\ mixIV}$, $\boxed{9\ mixIV}$,
+    $\boxed{10\ mixIV}$ (smaller 1 ml tubes from John Burns,
     have conical bottoms, makes more minute separations easier)}
 
 \item{Transfer:
@@ -3958,152 +3906,144 @@ Fourth contact
   $\boxed{8\ mixIII}$, $\boxed{9\ mixIII}$,
   $\boxed{10\ miIIIx}$.
   (3 clear push caps, and 9 blue push caps
-  9 red push caps). Also with 3 15 ml centrifuge tubes (already
-  have three in the glovebox)}
+  9 red push caps). With three centrifuge tubes}
 
-\item[\done]{Centrifuge $\boxed{8\ aqII}$, $\boxed{9\ aqII}$,
-  $\boxed{10\ aqII}$ for 3,300 rpm. 4 minutes to get liquid to
+\item{Centrifuge $\boxed{8\ aqIII}$, $\boxed{9\ aqIII}$,
+  $\boxed{10\ aqIII}$ for 3,300 rpm. 4 minutes to get liquid to
   bottom}
-\item[\done]{Measure volumes of all aqueous phases, $\boxed{8\ aqII}$
-     $\boxed{9\ aqII}$, $\boxed{10\ aqII}$}
+\item{Measure volumes of all aqueous phases, $\boxed{8\ aqIII}$
+     $\boxed{9\ aqIII}$, $\boxed{10\ aqIII}$}
 \begin{table}[H]
   \begin{center}
     \caption{Volumes for combined aqueous phases}
     \begin{tabular}{l l l}
       \toprule
       Series & Aqueous (8,9, or 10)\\ 
-      8 &  353+/-3\% \\
-      9 &  353+/-3\% \\
-      10 & 362+/-3\% \\
+      8 &   \\
+      9 &   \\
+      10 &  \\
       \bottomrule
     \end{tabular}
   \end{center}
 \end{table}  
 \
-\item[\done]{Add 353 $\mu$l of $\boxed{TBP}$ to $\boxed{8\ aqII}$}
-\item[\done]{\textbf{Add 362 }$\mu$l of $\boxed{TBP}$ to $\boxed{9\ aqII}$}
-  \begin{itemize}
-  \item{\textbf{Accident!!! need to correct in calculations}}
-  \end{itemize}
-\item[\done]{Add 362 $\mu$l of $\boxed{TBP}$ to $\boxed{10\ aqII}$}
-\item[\done]{Vortex mix $\boxed{8\ aqII}$ for 15 minutes on pulse mode}
-\item[\done]{Vortex mix $\boxed{9\ aqII}$ for 15 minutes on pulse mode}
-\item[\done]{Vortex mix $\boxed{10\ aqII}$ for 15 minutes on pulse mode}
+\item{Add XX $\mu$l of $\boxed{TBP}$ to $\boxed{8\ aqIII}$}
+\item{Add XX $\mu$l of $\boxed{TBP}$ to $\boxed{9\ aqIII}$}
+\item{Add XX $\mu$l of $\boxed{TBP}$ to $\boxed{10\ aqIII}$}
+\item{Vortex mix $\boxed{8\ aqIII}$
+  for 15 minutes on pulse mode}
+\item{Vortex mix $\boxed{9\ aqIII}$ for 15 minutes on pulse mode}
+\item{Vortex mix $\boxed{10\ aqIII}$ for 15 minutes on pulse mode}
 
-\item[\done]{Centrifuge $\boxed{8\ aqII}$, $\boxed{9\ aqII}$,
-  and $\boxed{10\ aqII}$
+\item{Centrifuge $\boxed{8\ aqIII}$, $\boxed{9\ aqIII}$,
+  and $\boxed{10\ aqIII}$
   with $\boxed{Buddy}$ on 3300 rpm, for 10 minutes}
 
-\item[\done]{Pipette with disposable pipette the organic phase
+\item{Pipette with disposable pipette the organic phase
   first, then the aqueous (for all three vials),
   (also used different disposable pipettes for the
   different phases - no contamination)
   as much as so that there is no mixing.
-  Then transferred the boundary to a smaller vial, let sit.
+  Then transferred the boundary to a smaller vial,
+  centrifuge, then transfer the rest.
   Prepare counting solutions of 250 $\mu$l of each of the solutions
   A picture will be provided for the whole process for
-  $\boxed{8\ aqII}$
+  $\boxed{8\ aqIII}$
   on the following page
   , also make dilution of each of the phases. Directly below
   are notes for what happened in the initial transfer,
   and below that are notes for the dilution.}
   \begin{itemize}
-  \item{$\boxed{10\ OrIII\ C}$ and $\boxed{10\ AqIII\ C}$
-    both have 200 $\mu$l instead of 250 $\mu$l. Potentially
-    because I lost a drop of the organic phase}
-  \item{Combined all organic after making count and dilution
-    solutions}
-  \item{Also had to recentrifuge the 10 series twice}
+  \item{Some notes}\vspace{2cm}
   \end{itemize}
   
-\item[\done]{Make dilution of each aqueous}
+\item{Make dilution of each aqueous}
   \begin{todolist}
-  \item[\done]{- $\boxed{8\ aqIII}$}
+  \item{- $\boxed{8\ aqIV}$}
   \end{todolist}
   \begin{center}
-    10+/-0.3 $\mu$l of $\boxed{8\ aqIII}$
+    10+/-0.3 $\mu$l of $\boxed{8\ aqIV}$
     (4 M HNO\tsbs{3}) [smaller pipette]\\
     +\\
     990+/-5.94 $\mu$l of DI water (leftover in glovebox)\\
     =\\
     1.0+/-0.006 ml of $\sim$
-    0 M HNO\tsbs{3} $\boxed{8\ aqIII\ Dilution}$
+    0 M HNO\tsbs{3} $\boxed{8\ aqIV\ Dilution}$
   \end{center}
   \begin{todolist}
-  \item[\done]{- $\boxed{9\ aqIII}$}
+  \item{- $\boxed{9\ aqIV}$}
   \end{todolist}
   \begin{center}
-    10+/-0.3 $\mu$l of $\boxed{9\ aqIII}$
+    10+/-0.3 $\mu$l of $\boxed{9\ aqIV}$
     (4 M HNO\tsbs{3}) [smaller pipette]\\
     +\\
     990+/-5.9 $\mu$l of DI water (leftover in glovebox)\\
     =\\
     1.0+/-0.006 ml of $\sim$
-    0 M HNO\tsbs{3} $\boxed{9\ aqIII\ Dilution}$
+    0 M HNO\tsbs{3} $\boxed{9\ aqIV\ Dilution}$
   \end{center}
   \begin{todolist}
-  \item[\done]{- $\boxed{10\ aqIII}$}
+  \item{- $\boxed{10\ aqIV}$}
   \end{todolist}
   \begin{center}
-    10+/-0.3 $\mu$l of $\boxed{10\ aqIII}$
+    10+/-0.3 $\mu$l of $\boxed{10\ aqIV}$
     (4 M HNO\tsbs{3}) [smaller pipette]\\
     +\\
     990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
     =\\
     1.0+/-0.006 ml of $\sim$
-    0 M HNO\tsbs{3} $\boxed{10\ aqIII\ Dilution}$
+    0 M HNO\tsbs{3} $\boxed{10\ aqIV\ Dilution}$
   \end{center}
 
-\item[\done]{Make dilution of each organic phase}
+\item{Make dilution of each organic phase}
   \begin{todolist}
-  \item[\done]{- $\boxed{8\ orIII}$}
+  \item{- $\boxed{8\ orIV}$}
   \end{todolist}
   \begin{center}
-    10+/-0.3 $\mu$l of $\boxed{8\ orIII}$
+    10+/-0.3 $\mu$l of $\boxed{8\ orIV}$
     (30\% TBP) [smaller pipette]\\
     +\\
     990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
     =\\
-    1.0+/-0.006 ml of 30\% TBP $\boxed{8\ oriII\ Dilution}$
+    1.0+/-0.006 ml of 30\% TBP $\boxed{8\ orIV\ Dilution}$
   \end{center}
   \begin{todolist}
-  \item[\done]{- $\boxed{9\ orIII}$}
+  \item{- $\boxed{9\ orIV}$}
   \end{todolist}
   \begin{center}
-    10+/-0.3 $\mu$l of $\boxed{9\ orIII}$
+    10+/-0.3 $\mu$l of $\boxed{9\ orIV}$
     (30\% TBP) [smaller pipette]\\
     +\\
     990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
     =\\
-    1.0+/-0.006 ml of 30\% TBP $\boxed{9\ orIII\ Dilution}$
+    1.0+/-0.006 ml of 30\% TBP $\boxed{9\ orIV\ Dilution}$
   \end{center}
   \begin{todolist}
-  \item[\done]{- $\boxed{10\ orIII}$}
+  \item{- $\boxed{10\ orIV}$}
   \end{todolist}
   \begin{center}
-    10+/-0.3 $\mu$l of $\boxed{10\ orIII}$
+    10+/-0.3 $\mu$l of $\boxed{10\ orIV}$
     (30\% TBP) [smaller pipette]\\
     +\\
     990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
     =\\
-    1.0+/-0.006 ml of 30\% TBP $\boxed{10\ orIII\ Dilution}$
+    1.0+/-0.006 ml of 30\% TBP $\boxed{10\ orIV\ Dilution}$
   \end{center}
  
-\item[\done]{Transfer out $\boxed{8\ orIII\ C}$, $\boxed{8\ aqIII\ C}$,
-  $\boxed{9\ orIII\ C}$, $\boxed{9\ aqIII\ C}$, $\boxed{10\ orIII\ C}$,
-  $\boxed{10\ aqIII\ C}$, in 15 ml centrifuge tubes}
-\item[\done]{Clean stuff in glovebox}
-\item[\done]{Radiac wash the above tubes, and store in fumehood behind
+\item{Transfer out $\boxed{8\ orIV\ C}$, $\boxed{8\ aqIV\ C}$,
+  $\boxed{9\ orIV\ C}$, $\boxed{9\ aqIV\ C}$, $\boxed{10\ orIV\ C}$,
+  $\boxed{10\ aqIV\ C}$, in 15 ml centrifuge tubes}
+\item{Clean stuff in glovebox}
+\item{Radiac wash the above tubes, and store in fumehood behind
   lead - wait to count}
-\item[\done]{Centrifuge $\boxed{8\ orIII\ C}$, $\boxed{8\ aqIII\ C}$,
-  $\boxed{9\ orIII\ C}$, $\boxed{9\ aqIII\ C}$, $\boxed{10\ orIII\ C}$,
-  $\boxed{10\ aqIII\ C}$, for 2 minutes 4,400 rpm to put all liquid at
+\item{Centrifuge $\boxed{8\ orIV\ C}$, $\boxed{8\ aqIV\ C}$,
+  $\boxed{9\ orIV\ C}$, $\boxed{9\ aqIV\ C}$, $\boxed{10\ orIV\ C}$,
+  $\boxed{10\ aqIV\ C}$, for 2 minutes 4,400 rpm to put all liquid at
   bottom, then parafilm wrap all the vials and store in fumehood.}
-\item[\done]{Start count $\boxed{8\ aqIII\ C}$ at 26 cm 2:15pm}
-\item{Stop count $\boxed{8\ AqIII\ C}$ at 5:30 pm}
-\item{Start count $\boxed{9\ AqIII\ C}$ at 5:30 pm}
-\item{Stop count $\boxed{9\ AqIII\ C}$ at 9:30 pm}
-\item{Start count $\boxed{10\ AqIII\ C}$ at 9:30 pm (count over night)}
+\item{Stop count $\boxed{8\ OrIII\ C}$ at TIME pm}
+\item{Start count $\boxed{9\ OrIII\ C}$ at TIME pm}
+\item{Stop count $\boxed{9\ OrIII\ C}$ at LATE pm}
+\item{Start count $\boxed{10\ OrIII\ C}$ at LATE pm (count over night)}
  
 \end{todolist}
 
@@ -4115,13 +4055,6 @@ Fourth contact
 \caption{Extraction three times round 2 extraction 3}
 \label{fig:round2_extraction3}
 \end{figure}
-
-
-
-
-
-
-
 
 
 
